# projet-image

./: .gitignore  Projet.ipynb  QCM_seance3_gradient_contours_segmentation.ipynb  README.md  Thomas_Bourovn_QCM_seance3.ipynb  pyproject.toml  requirements.txt  seance02.ipynb  seance3_amelioree.ipynb
.claude/: settings.local.json
data/: README.txt
notebooks/: Projet_demo.ipynb
src/: __init__.py  clustering.py  features.py  forest_pipeline.py  postprocessing.py  preprocessing.py  quantification.py  visualization.py
